--- a/src/app/pages/add-property/step-1/step1-4-1-where/step1-4-1-where.css
+++ b/src/app/pages/add-property/step-1/step1-4-1-where/step1-4-1-where.css
@@ -174,6 +174,20 @@ html {
   z-index: 1;
 }
 
+/* Ensure Leaflet marker icons display properly */
+.leaflet-marker-icon {
+  border-radius: 0 !important;
+}
+
+.leaflet-marker-shadow {
+  border-radius: 0 !important;
+}
+
+/* Fix for marker images not loading */
+.leaflet-default-icon-path {
+  background-image: url('https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/images/marker-icon.png');
+}
+
 .loading {
   opacity: 0.7;
   pointer-events: none;
